<package format="3">
	<name>spark_msgs</name>
	<version>0.0.0</version>
	<description>Messages for Sparks</description>

	<license>MIT</license>
	<maintainer email="max.daiber-huppert@ipa.fraunhofer.de">Max Daiber-Huppert</maintainer>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<build_depend>rosidl_default_generators</build_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
    	<build_type>ament_cmake</build_type>
 	</export>
</package>
